--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const token = "YOUR_BOT_TOKEN";
-      const chatId = "YOUR_CHAT_ID";
+      const token = "7610643784:AAFgZkCYjMsKXku218wyi9l2cAAxMq1v4po";
+      const chatId = "1720283336";
 
       const formData = new FormData(form);
       const caption = `
