--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <div class="dev-names">👨‍💻 Developers: Kavindu Iduwara &amp; Ishan Nimsara</div>
 
       <p class="small-notice">
-        ⚠️ Avoid sharing this to anyone. If so, your bot decline is refused.<br />
-        🚫 මෙය කිසිවෙකුටත් Share කිරිමෙන් වළකින්න. එසේ වුණොත් ඔබගේ Bot Deploy කිරීම ප්‍රතික්ෂේප කරණු ලබයි.
+        ⚠️ Avoid sharing Premium Key to anyone. If so, your bot decline is refused.<br />
+        🚫 Premium Key කිසිවෙකුටත් Share කිරිමෙන් වළකින්න. එසේ වුණොත් ඔබගේ Bot Deploy කිරීම ප්‍රතික්ෂේප කරණු ලබයි.
       </p>
 
       <button class="btn" id="goDeployBtn">Let's Go to Deploy</button>
@@ -214,9 +214,9 @@
         <input type="text" name="season" placeholder="Season ID" required />
         <button type="submit">Submit</button>
 
-        <p class="notice-text">⏱ Bot will deploy within <strong>4 hours</strong> after payment.</p>
+        <p class="notice-text">⏱ Bot will deploy within <strong>3 hours</strong> after payment.</p>
         <p class="notice-text">💳 Payment: EzCash / Reload</p>
-          <a href="https://wa.me/+94764040298?text=Want Premium Key" target="_blank" rel="noopener" class="buy-key-btn">Buy Premium Key</a>
+          <a href="https://wa.me/+94764040298?text=Want Premium Key" target="_blank" rel="noopener" class="buy-key-btn">💎 Buy Premium Key</a>
         <p class="notice-text">📞 Contact: 077 005 1298</p>
       </form>
     </div>
