--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <button type="submit">Submit</button>
 
         <p class="notice-text">⏱ Bot will deploy within <strong>3 hours</strong> after payment.</p>
-        <p class="notice-text">💳 Payment: EzCash / Reload</p>
+        <p class="notice-text">💳 Payment: EzCash / Reload (Tax 10%)</p>
           <a href="https://wa.me/+94764040298?text=Want Premium Key" target="_blank" rel="noopener" class="buy-key-btn">💎 Buy Premium Key</a>
         <p class="notice-text">📞 Contact: 077 005 1298</p>
       </form>
