--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
     <!-- Panel 2: Form -->
     <div id="panel2">
-      <h2>📝 Buy Your Bot</h2>
+      <h2>📝 Deploy Your Bot</h2>
       <form id="botForm">
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="text" name="number" placeholder="WhatsApp Number" required />
